--- a/calendar-marks-planner.tex
+++ b/calendar-marks-planner.tex
@@ -1,12 +1,12 @@
 
 \SetCalendarMarks{1}{%
 % Ajahn Chah Memorial Day
-\draw[textbody] node [above right=\markNormalAbove{} and \markNormalRight{} of cal01-\theCalendarYear-01-16.north east] {\sn{1}};
+\draw[textbody] node [above right=\markMoonAbove{} and \markMoonRight{} of cal01-\theCalendarYear-01-16.north east] {\sn{1}};
 }
 
 \SetCalendarMarks{2}{%
 % Magha Puja
-\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal02-\theCalendarYear-02-03.north east] {\sn{2}};
+\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal02-\dateMaghaPuja.north east] {\sn{2}};
 }
 
 \SetCalendarMarks{3}{}
@@ -15,7 +15,7 @@
 
 \SetCalendarMarks{5}{%
 % Vesakha Puja
-\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal05-\theCalendarYear-05-04.north east] {\sn{3}};
+\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal05-\dateVisakhaPuja.north east] {\sn{3}};
 }
 
 \SetCalendarMarks{6}{%
@@ -25,9 +25,9 @@
 
 \SetCalendarMarks{7}{%
 % Asalha Puja
-\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal07-\theCalendarYear-07-02.north east] {\sn{5}};
-% Vassa begins
-\draw[textbody] node [above right=\markNormalAbove{} and \markNormalRight{} of cal07-\theCalendarYear-07-03.north east] {\sn{6}};
+\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal07-\dateAsalhaPuja.north east] {\sn{5}};
+% First day of Vassa
+\draw[textbody] node [above right=\markNormalAbove{} and \markNormalRight{} of cal07-\dateVassaFirstDay.north east] {\sn{6}};
 }
 
 \SetCalendarMarks{8}{}
@@ -36,7 +36,9 @@
 
 \SetCalendarMarks{10}{%
 % Pavarana day
-\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal10-\theCalendarYear-10-08.north east] {\sn{7}};
+\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal10-\datePavarana.north east] {\sn{7}};
+% Last day of Vassa
+\draw[gold] node [above right=\markMoonAbove{} and \markMoonRight{} of cal10-\dateVassaLastDay.north east] {\sn{8}};
 }
 
 \SetCalendarMarks{11}{}
