--- a/english-text.tex
+++ b/english-text.tex
@@ -34,6 +34,7 @@
 \renewcommand\textNewZealand{New Zealand}
 \renewcommand\textUnitedStates{United States}
 \renewcommand\textItaly{Italy}
+\renewcommand\textCanada{Canada}
 
 }% \PostLayoutSettings
 
@@ -44,23 +45,27 @@
 \renewcommand\FrontMatterText{%
 
 {\centering
-\fontsize{10.8}{15}\selectfont
-\setlength{\parskip}{0.7\baselineskip}
+\frontMatterFmt
 
 This calendar has been sponsored for free distribution\\
 by the Kataññnutā group of Malaysia, Singapore and Australia.
 
 % TODO: Add credits
-Anumodanā to the many friends who have offered their photographs for this \theCalendarYear\ calendar,\\
-in particular:
+Many friends and supporters generously made their photographs available for Sangha publications.\\
+This \theCalendarYear\ calendar includes:
 Person~Name (Apr., Nov.),
 Person~Name (cover, Jun., Aug.),
 Person~Name (Sep.),
 Person~Name (Dec.),
 Person~Name (Feb.),
 Person~Name (Oct.).
+and several others of whose names we are not aware. \emph{Anumodanā}.
 
-Monthly Dhamma quotes are adapted from translated teachings contained in\\
+% TODO: cover description
+Cover: `\emph{Asking for forgiveness}.' Detail from a temple mural\\
+painted by Khun Pang Chinasai, Aruna Ratanagiri Buddhist Monastery, UK
+
+Monthly Dhamma quotes are adapted from transcribed and translated teachings contained in\\
 \emph{The Collected Teachings of Ajahn Chah}, available for download at the links below.
 
 e-book formats:\hspace{0.3em} www.fsbooks.org/ajahn-chah-teachings
@@ -118,7 +123,8 @@ www.forestsanghapublications.org
 
 % TODO: Copyright date is \theCalendarYear - 1
 Calendar production by Aruno Publications,\\
-Aruna Ratanagiri Buddhist Monastery, UK\\
+Aruna Ratanagiri Buddhist Monastery, UK
+
 \copyright\ Aruno Publications \the\year\\
 www.ratanagiri.org.uk
 
