--- a/layout_planner.sty
+++ b/layout_planner.sty
@@ -77,117 +77,110 @@
 }
 
 \newcommand{\moondays}{%
-% New Moons
-if (equals=2014-01-30) [day text=\MyMoon{1}]%
-if (equals=2014-02-28) [day text=\MyMoon{1}]%
-if (equals=2014-03-30) [day text=\MyMoon{1}]%
-if (equals=2014-04-28) [day text=\MyMoon{1}]%
-if (equals=2014-05-28) [day text=\MyMoon{1}]%
-if (equals=2014-06-26) [day text=\MyMoon{1}]%
-if (equals=2014-07-26) [day text=\MyMoon{1}]%
-if (equals=2014-08-24) [day text=\MyMoon{1}]%
-if (equals=2014-09-23) [day text=\MyMoon{1}]%
-if (equals=2014-10-22) [day text=\MyMoon{1}]%
-if (equals=2014-11-21) [day text=\MyMoon{1}]%
-if (equals=2014-12-20) [day text=\MyMoon{1}]%
-% Waxing Moons
-if (equals=2014-01-08) [day text=\MyMoon{2}]%
-if (equals=2014-02-07) [day text=\MyMoon{2}]%
-if (equals=2014-03-08) [day text=\MyMoon{2}]%
-if (equals=2014-04-07) [day text=\MyMoon{2}]%
-if (equals=2014-05-06) [day text=\MyMoon{2}]%
-if (equals=2014-06-05) [day text=\MyMoon{2}]%
-if (equals=2014-07-04) [day text=\MyMoon{2}]%
-if (equals=2014-08-03) [day text=\MyMoon{2}]%
-if (equals=2014-09-01) [day text=\MyMoon{2}]%
-if (equals=2014-10-01) [day text=\MyMoon{2}]%
-if (equals=2014-10-30) [day text=\MyMoon{2}]%
-if (equals=2014-11-29) [day text=\MyMoon{2}]%
-if (equals=2014-12-28) [day text=\MyMoon{2}]%
-% Full Moons
-if (equals=2014-01-15) [day text=\MyMoon{3}]%
-if (equals=2014-02-14) [day text=\MyMoon{3}]%
-if (equals=2014-03-15) [day text=\MyMoon{3}]%
-if (equals=2014-04-14) [day text=\MyMoon{3}]%
-if (equals=2014-05-13) [day text=\MyMoon{3}]%
-if (equals=2014-06-12) [day text=\MyMoon{3}]%
-if (equals=2014-07-11) [day text=\MyMoon{3}]%
-if (equals=2014-08-10) [day text=\MyMoon{3}]%
-if (equals=2014-09-08) [day text=\MyMoon{3}]%
-if (equals=2014-10-08) [day text=\MyMoon{3}]%
-if (equals=2014-11-06) [day text=\MyMoon{3}]%
-if (equals=2014-12-06) [day text=\MyMoon{3}]%
-% Waning Moons
-if (equals=2014-01-23) [day text=\MyMoon{4}]%
-if (equals=2014-02-22) [day text=\MyMoon{4}]%
-if (equals=2014-03-23) [day text=\MyMoon{4}]%
-if (equals=2014-04-22) [day text=\MyMoon{4}]%
-if (equals=2014-05-21) [day text=\MyMoon{4}]%
-if (equals=2014-06-20) [day text=\MyMoon{4}]%
-if (equals=2014-07-19) [day text=\MyMoon{4}]%
-if (equals=2014-08-18) [day text=\MyMoon{4}]%
-if (equals=2014-09-16) [day text=\MyMoon{4}]%
-if (equals=2014-10-16) [day text=\MyMoon{4}]%
-if (equals=2014-11-14) [day text=\MyMoon{4}]%
-if (equals=2014-12-14) [day text=\MyMoon{4}]%
+if (equals=2016-01-02) [day text=\MyMoon{4}]%
+if (equals=2016-01-08) [day text=\MyMoon{1}]%
+if (equals=2016-01-16) [day text=\MyMoon{2}]%
+if (equals=2016-01-23) [day text=\MyMoon{3}]%
+if (equals=2016-01-31) [day text=\MyMoon{4}]%
+if (equals=2016-02-07) [day text=\MyMoon{1}]%
+if (equals=2016-02-15) [day text=\MyMoon{2}]%
+if (equals=2016-02-22) [day text=\MyMoon{3}]% % magha
+if (equals=2016-03-01) [day text=\MyMoon{4}]%
+if (equals=2016-03-07) [day text=\MyMoon{1}]%
+if (equals=2016-03-15) [day text=\MyMoon{2}]%
+if (equals=2016-03-22) [day text=\MyMoon{3}]%
+if (equals=2016-03-30) [day text=\MyMoon{4}]%
+if (equals=2016-04-06) [day text=\MyMoon{1}]%
+if (equals=2016-04-14) [day text=\MyMoon{2}]%
+if (equals=2016-04-21) [day text=\MyMoon{3}]%
+if (equals=2016-04-29) [day text=\MyMoon{4}]%
+if (equals=2016-05-05) [day text=\MyMoon{1}]%
+if (equals=2016-05-13) [day text=\MyMoon{2}]%
+if (equals=2016-05-20) [day text=\MyMoon{3}]% % visakha
+if (equals=2016-05-28) [day text=\MyMoon{4}]%
+if (equals=2016-06-04) [day text=\MyMoon{1}]%
+if (equals=2016-06-12) [day text=\MyMoon{2}]%
+if (equals=2016-06-19) [day text=\MyMoon{3}]%
+if (equals=2016-06-27) [day text=\MyMoon{4}]%
+if (equals=2016-07-04) [day text=\MyMoon{1}]%
+if (equals=2016-07-12) [day text=\MyMoon{2}]%
+if (equals=2016-07-19) [day text=\MyMoon{3}]% % asalha
+if (equals=2016-07-27) [day text=\MyMoon{4}]%
+if (equals=2016-08-03) [day text=\MyMoon{1}]%
+if (equals=2016-08-11) [day text=\MyMoon{2}]%
+if (equals=2016-08-18) [day text=\MyMoon{3}]%
+if (equals=2016-08-26) [day text=\MyMoon{4}]%
+if (equals=2016-09-01) [day text=\MyMoon{1}]%
+if (equals=2016-09-09) [day text=\MyMoon{2}]%
+if (equals=2016-09-16) [day text=\MyMoon{3}]%
+if (equals=2016-09-24) [day text=\MyMoon{4}]%
+if (equals=2016-10-01) [day text=\MyMoon{1}]%
+if (equals=2016-10-09) [day text=\MyMoon{2}]%
+if (equals=2016-10-16) [day text=\MyMoon{3}]% % assayuja
+if (equals=2016-10-24) [day text=\MyMoon{4}]%
+if (equals=2016-10-30) [day text=\MyMoon{1}]%
+if (equals=2016-11-07) [day text=\MyMoon{2}]%
+if (equals=2016-11-14) [day text=\MyMoon{3}]%
+if (equals=2016-11-22) [day text=\MyMoon{4}]%
+if (equals=2016-11-29) [day text=\MyMoon{1}]%
+if (equals=2016-12-07) [day text=\MyMoon{2}]%
+if (equals=2016-12-14) [day text=\MyMoon{3}]%
+if (equals=2016-12-22) [day text=\MyMoon{4}]%
+if (equals=2016-12-28) [day text=\MyMoon{1}]%
 }
 
 % http://eclipse.gsfc.nasa.gov/phase/phase2001gmt.html
 \newcommand{\astromoondays}{
-% New Moon
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-01-10.south east] {\MyAstroMoon{1}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-02-08.south east] {\MyAstroMoon{1}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-03-09.south east] {\MyAstroMoon{1}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-04-07.south east] {\MyAstroMoon{1}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-05-06.south east] {\MyAstroMoon{1}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-06-05.south east] {\MyAstroMoon{1}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-07-04.south east] {\MyAstroMoon{1}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-08-02.south east] {\MyAstroMoon{1}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-09-01.south east] {\MyAstroMoon{1}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-10-01.south east] {\MyAstroMoon{1}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-10-30.south east] {\MyAstroMoon{1}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-11-29.south east] {\MyAstroMoon{1}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-12-29.south east] {\MyAstroMoon{1}};
-% Waxing
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-01-16.south east] {\MyAstroMoon{2}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-02-15.south east] {\MyAstroMoon{2}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-03-15.south east] {\MyAstroMoon{2}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-04-14.south east] {\MyAstroMoon{2}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-05-13.south east] {\MyAstroMoon{2}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-06-12.south east] {\MyAstroMoon{2}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-07-12.south east] {\MyAstroMoon{2}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-08-10.south east] {\MyAstroMoon{2}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-09-09.south east] {\MyAstroMoon{2}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-10-09.south east] {\MyAstroMoon{2}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-11-07.south east] {\MyAstroMoon{2}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-12-07.south east] {\MyAstroMoon{2}};
-%Full Moon
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-01-24.south east] {\MyAstroMoon{3}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-02-22.south east] {\MyAstroMoon{3}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-03-23.south east] {\MyAstroMoon{3}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-04-22.south east] {\MyAstroMoon{3}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-05-21.south east] {\MyAstroMoon{3}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-06-20.south east] {\MyAstroMoon{3}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-07-19.south east] {\MyAstroMoon{3}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-08-18.south east] {\MyAstroMoon{3}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-09-16.south east] {\MyAstroMoon{3}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-10-16.south east] {\MyAstroMoon{3}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-11-14.south east] {\MyAstroMoon{3}};
-\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-12-14.south east] {\MyAstroMoon{3}};
-% Waning
 \draw[gold] node [below right=-3mm and -1.5mm of cal-2016-01-02.south east] {\MyAstroMoon{4}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-01-10.south east] {\MyAstroMoon{1}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-01-16.south east] {\MyAstroMoon{2}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-01-24.south east] {\MyAstroMoon{3}};
 \draw[gold] node [below right=-3mm and -1.5mm of cal-2016-02-01.south east] {\MyAstroMoon{4}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-02-08.south east] {\MyAstroMoon{1}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-02-15.south east] {\MyAstroMoon{2}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-02-22.south east] {\MyAstroMoon{3}};
 \draw[gold] node [below right=-3mm and -1.5mm of cal-2016-03-01.south east] {\MyAstroMoon{4}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-03-09.south east] {\MyAstroMoon{1}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-03-15.south east] {\MyAstroMoon{2}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-03-23.south east] {\MyAstroMoon{3}};
 \draw[gold] node [below right=-3mm and -1.5mm of cal-2016-03-31.south east] {\MyAstroMoon{4}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-04-07.south east] {\MyAstroMoon{1}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-04-14.south east] {\MyAstroMoon{2}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-04-22.south east] {\MyAstroMoon{3}};
 \draw[gold] node [below right=-3mm and -1.5mm of cal-2016-04-30.south east] {\MyAstroMoon{4}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-05-06.south east] {\MyAstroMoon{1}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-05-13.south east] {\MyAstroMoon{2}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-05-21.south east] {\MyAstroMoon{3}};
 \draw[gold] node [below right=-3mm and -1.5mm of cal-2016-05-29.south east] {\MyAstroMoon{4}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-06-05.south east] {\MyAstroMoon{1}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-06-12.south east] {\MyAstroMoon{2}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-06-20.south east] {\MyAstroMoon{3}};
 \draw[gold] node [below right=-3mm and -1.5mm of cal-2016-06-27.south east] {\MyAstroMoon{4}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-07-04.south east] {\MyAstroMoon{1}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-07-12.south east] {\MyAstroMoon{2}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-07-19.south east] {\MyAstroMoon{3}};
 \draw[gold] node [below right=-3mm and -1.5mm of cal-2016-07-26.south east] {\MyAstroMoon{4}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-08-02.south east] {\MyAstroMoon{1}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-08-10.south east] {\MyAstroMoon{2}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-08-18.south east] {\MyAstroMoon{3}};
 \draw[gold] node [below right=-3mm and -1.5mm of cal-2016-08-25.south east] {\MyAstroMoon{4}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-09-01.south east] {\MyAstroMoon{1}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-09-09.south east] {\MyAstroMoon{2}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-09-16.south east] {\MyAstroMoon{3}};
 \draw[gold] node [below right=-3mm and -1.5mm of cal-2016-09-23.south east] {\MyAstroMoon{4}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-10-01.south east] {\MyAstroMoon{1}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-10-09.south east] {\MyAstroMoon{2}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-10-16.south east] {\MyAstroMoon{3}};
 \draw[gold] node [below right=-3mm and -1.5mm of cal-2016-10-22.south east] {\MyAstroMoon{4}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-10-30.south east] {\MyAstroMoon{1}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-11-07.south east] {\MyAstroMoon{2}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-11-14.south east] {\MyAstroMoon{3}};
 \draw[gold] node [below right=-3mm and -1.5mm of cal-2016-11-21.south east] {\MyAstroMoon{4}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-11-29.south east] {\MyAstroMoon{1}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-12-07.south east] {\MyAstroMoon{2}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-12-14.south east] {\MyAstroMoon{3}};
 \draw[gold] node [below right=-3mm and -1.5mm of cal-2016-12-21.south east] {\MyAstroMoon{4}};
+\draw[gold] node [below right=-3mm and -1.5mm of cal-2016-12-29.south east] {\MyAstroMoon{1}};
 }
 
 %\newcommand*{\customdays}{\moondays}
@@ -215,8 +208,8 @@ if (equals=2014-12-14) [day text=\MyMoon{4}]%
   month label left,
   execute at begin day scope={
     \ifdate{weekend}{\color{black!60}}{}
-    % Vassa
-    \ifdate{between=07-12 and 10-08}{\color{gold}}{}
+    % TODO: Vassa dates
+    \ifdate{between=07-19 and 10-16}{\color{gold}}{}
     \ifdate{between=01-01 and 01-31}{
       \def\l{\ifcase\pgfcalendarcurrentweekday M\or T\or W\or T\or F\or S\or S\fi}%
       \ifdate{weekend}{\def\daylabelcolor{gold}}{\def\daylabelcolor{black}}%
