--- a/photos.tex
+++ b/photos.tex
@@ -2,50 +2,50 @@
 % trim=left bottom right top
 
 \SetPhoto{1}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{January.pdf}
+\includegraphics[ keepaspectratio, height=\thePhotoHeight ]{January.pdf}
 }
 
 \SetPhoto{2}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{February.pdf}
+\includegraphics[ keepaspectratio, height=\thePhotoHeight ]{February.pdf}
 }
 
 \SetPhoto{3}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{March.pdf}
+\includegraphics[ keepaspectratio, height=\thePhotoHeight ]{March.pdf}
 }
 
 \SetPhoto{4}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{April.pdf}
+\includegraphics[ keepaspectratio, height=\thePhotoHeight ]{April.pdf}
 }
 
 \SetPhoto{5}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{May.pdf}
+\includegraphics[ keepaspectratio, height=\thePhotoHeight ]{May.pdf}
 }
 
 \SetPhoto{6}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{June.pdf}
+\includegraphics[ keepaspectratio, height=\thePhotoHeight ]{June.pdf}
 }
 
 \SetPhoto{7}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{July.pdf}
+\includegraphics[ keepaspectratio, height=\thePhotoHeight ]{July.pdf}
 }
 
 \SetPhoto{8}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{August.pdf}
+\includegraphics[ keepaspectratio, height=\thePhotoHeight ]{August.pdf}
 }
 
 \SetPhoto{9}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{September.pdf}
+\includegraphics[ keepaspectratio, height=\thePhotoHeight ]{September.pdf}
 }
 
 \SetPhoto{10}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{October.pdf}
+\includegraphics[ keepaspectratio, height=\thePhotoHeight ]{October.pdf}
 }
 
 \SetPhoto{11}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{November.pdf}
+\includegraphics[ keepaspectratio, height=\thePhotoHeight ]{November.pdf}
 }
 
 \SetPhoto{12}{%
-\includegraphics[keepaspectratio, height=\thePhotoHeight, clip, trim=0 0 0 0]{December.pdf}
+\includegraphics[ keepaspectratio, height=\thePhotoHeight ]{December.pdf}
 }
 
