--- a/thumbs.tex
+++ b/thumbs.tex
@@ -1,85 +1,49 @@
 
 \SetThumbPhoto{1}{%
-\includegraphics[
-  keepaspectratio, height=\theThumbHeight, clip,
-  viewport=5mm 5mm 25mm 25mm,
-]{January_thumb.pdf}
+\includegraphics[ keepaspectratio, height=\theThumbHeight ]{January_thumb.pdf}
 }
 
 \SetThumbPhoto{2}{%
-\includegraphics[
-  keepaspectratio, height=\theThumbHeight, clip,
-  viewport=5mm 5mm 25mm 25mm,
-]{February_thumb.pdf}
+\includegraphics[ keepaspectratio, height=\theThumbHeight ]{February_thumb.pdf}
 }
 
 \SetThumbPhoto{3}{%
-\includegraphics[
-  keepaspectratio, height=\theThumbHeight, clip,
-  viewport=5mm 5mm 25mm 25mm,
-]{March_thumb.pdf}
+\includegraphics[ keepaspectratio, height=\theThumbHeight ]{March_thumb.pdf}
 }
 
 \SetThumbPhoto{4}{%
-\includegraphics[
-  keepaspectratio, height=\theThumbHeight, clip,
-  viewport=5mm 5mm 25mm 25mm,
-]{April_thumb.pdf}
+\includegraphics[ keepaspectratio, height=\theThumbHeight ]{April_thumb.pdf}
 }
 
 \SetThumbPhoto{5}{%
-\includegraphics[
-  keepaspectratio, height=\theThumbHeight, clip,
-  viewport=5mm 5mm 25mm 25mm,
-]{May_thumb.pdf}
+\includegraphics[ keepaspectratio, height=\theThumbHeight ]{May_thumb.pdf}
 }
 
 \SetThumbPhoto{6}{%
-\includegraphics[
-  keepaspectratio, height=\theThumbHeight, clip,
-  viewport=5mm 5mm 25mm 25mm,
-]{June_thumb.pdf}
+\includegraphics[ keepaspectratio, height=\theThumbHeight ]{June_thumb.pdf}
 }
 
 \SetThumbPhoto{7}{%
-\includegraphics[
-  keepaspectratio, height=\theThumbHeight, clip,
-  viewport=5mm 5mm 25mm 25mm,
-]{July_thumb.pdf}
+\includegraphics[ keepaspectratio, height=\theThumbHeight ]{July_thumb.pdf}
 }
 
 \SetThumbPhoto{8}{%
-\includegraphics[
-  keepaspectratio, height=\theThumbHeight, clip,
-  viewport=5mm 5mm 25mm 25mm,
-]{August_thumb.pdf}
+\includegraphics[ keepaspectratio, height=\theThumbHeight ]{August_thumb.pdf}
 }
 
 \SetThumbPhoto{9}{%
-\includegraphics[
-  keepaspectratio, height=\theThumbHeight, clip,
-  viewport=5mm 5mm 25mm 25mm,
-]{September_thumb.pdf}
+\includegraphics[ keepaspectratio, height=\theThumbHeight ]{September_thumb.pdf}
 }
 
 \SetThumbPhoto{10}{%
-\includegraphics[
-  keepaspectratio, height=\theThumbHeight, clip,
-  viewport=5mm 5mm 25mm 25mm,
-]{October_thumb.pdf}
+\includegraphics[ keepaspectratio, height=\theThumbHeight ]{October_thumb.pdf}
 }
 
 \SetThumbPhoto{11}{%
-\includegraphics[
-  keepaspectratio, height=\theThumbHeight, clip,
-  viewport=5mm 5mm 25mm 25mm,
-]{November_thumb.pdf}
+\includegraphics[ keepaspectratio, height=\theThumbHeight ]{November_thumb.pdf}
 }
 
 \SetThumbPhoto{12}{%
-\includegraphics[
-  keepaspectratio, height=\theThumbHeight, clip,
-  viewport=5mm 5mm 25mm 25mm,
-]{December_thumb.pdf}
+\includegraphics[ keepaspectratio, height=\theThumbHeight ]{December_thumb.pdf}
 }
 
